# jinja2-git

./: .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  README.rst  jinja2_git.py  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: test.yml
tests/: conftest.py  test_gitcommit.py
