[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style.toml"


[tool.poetry]
name = "jinja2-git"
version = "1.1.0"
description = "Jinja2 extension to handle git-specific things"

license = "MIT"

authors = [
    "Nikita Sobolev <mail@sobolenv.me>",
    "Mikhail Akimov <daggerito@gmail.com>"
]

readme = "README.md"

repository = "https://github.com/wemake-services/jinja2-git"
homepage = "https://github.com/wemake-services/jinja2-git"

keywords = [
    "jinja2",
    "jinja2-extension",
    "jinja2-plugin",
    "git",
]

classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.dependencies]
python = "^3.6"

jinja2 = "^2.10"


[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.11"
pytest-randomly = "^3.8"

wemake-python-styleguide = "^0.15"
flake8-pytest-style = "^1.4"
nitpick = "^0.26"

safety = "^1.10"
