[tool.poetry]
name = "jinja2-git"
version = "1.4.0"
description = "Jinja2 extension to handle git-specific things"

license = "MIT"

authors = [
  "Nikita Sobolev <mail@sobolenv.me>",
  "Mikhail Akimov <daggerito@gmail.com>"
]

readme = "README.md"

repository = "https://github.com/wemake-services/jinja2-git"
homepage = "https://github.com/wemake-services/jinja2-git"

keywords = [
  "jinja2",
  "jinja2-extension",
  "jinja2-plugin",
  "git",
]

classifiers=[
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://github.com/sponsors/wemake-services"

[tool.poetry.dependencies]
python = "^3.9"

jinja2 = ">=2.10,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pytest-cov = ">=5,<8"
pytest-randomly = ">=3.12,<5.0"

wemake-python-styleguide = "^0.19"
flake8-pytest-style = "^2.0"
nitpick = "^0.35"

mypy = "^1.10"


[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/0.19.2/styles/nitpick-style-wemake.toml"

